dotfiles/xmonad/xmonad.errors

xmonad.hs:633:61: error:
    • Variable not in scope: myManageHook :: Query (Endo WindowSet)
    • Perhaps you meant ‘manageHook’ (imported from XMonad)
    |
633 |         { manageHook = ( isFullscreen --> doFullFloat ) <+> myManageHook <+> manageDocks
    |                                                             ^^^^^^^^^^^^
